[package]
authors = ["GaggiX <fedegaggix@gmail.com>"]
edition = "2018"
name = "chess_engine2"
version = "0.1.0"

[dependencies]
anyhow = "1.0.38"
futures-util = "0.3.13"
ggez = {git = "https://github.com/ggez/ggez", branch = "devel"}
lazy_static = "1.4.0"
rayon = "1.5"
reqwest = {version = "0.11.1", features = ["stream"]}
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.64"
tokio = {version="1.2.0", features=["full"]}

[[bin]]
name = "chess"
path = "src/bin/game.rs"

[[bin]]
name = "bot"
path = "src/bin/lichess.rs"
